# advent-of-code-cpp

./: CMakeLists.txt  main.cpp
2024/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  day_template  days.h  main.cpp  mcqd.h  test_day7.cpp  tests.cpp
aoc/: CMakeLists.txt  aoc.cpp  aoc.h  day.h  util.cpp  util.h
src/: CMakeLists.txt  day.h  day1.cpp  day2.cpp  day3.cpp  main.cpp
